--- a/.gitignore.in
+++ b/.gitignore.in
@@ -4,10 +4,10 @@ cd "${0%/*}" && exec > .gitignore
 gitignore.io() { curl -L -s https://www.gitignore.io/api/"$*"; }
 # gibo: https://github.com/simonwhitaker/gibo
 # gitignore: https://pypi.python.org/pypi/gitignore 
-gibo macOS
-gibo Windows
-gibo Linux
-gibo Go
+gibo dump macOS
+gibo dump Windows
+gibo dump Linux
+gibo dump Go
 echo 'myip'
 echo 'myip_*'
 echo 'go-myip'
