Use go mod tidy instead go get

--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-go@v3
 
       - name: install dependencies
-        run: go get -v -t -d ./...
+        run: go mod tidy
 
       - name: lint
         run: go vet ./...
