--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -12,6 +12,9 @@ jobs:
 
       - name: setup
         uses: actions/setup-go@v3
+        with:
+          go-version: ^1.19.4
+          check-latest: true
 
       - name: install dependencies
         run: go mod tidy
