--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -28,6 +28,13 @@ jobs:
       - name: build
         run: go build ./...
 
+      - name: cross build
+        uses: goreleaser/goreleaser-action@v3
+        with:
+          distribution: goreleaser
+          version: latest
+          args: build --skip-validate --skip-post-hooks --skip-before --snapshot --rm-dist
+
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
