--- a/.gitignore
+++ b/.gitignore
@@ -110,4 +110,4 @@ $RECYCLE.BIN/
 # Go workspace file
 go.work
 # -----------------------------------------------------------------------------
-'dist/'
+dist/
