Update goreleaser to v2
In June 4, 2024 goreleaser v2 was released. https://goreleaser.com/blog/goreleaser-v2/

This commit updates the goreleaser to v2 and also updates the workflows to use the new goreleaser.

--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -36,11 +36,11 @@ jobs:
         run: go build ./...
 
       - name: cross build
-        uses: goreleaser/goreleaser-action@v5
+        uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
-          version: latest
-          args: build --skip-validate --skip-post-hooks --skip-before --snapshot --rm-dist
+          version: "~> v2"
+          args: build --snapshot --clean
 
       - uses: codecov/codecov-action@v4
         with:
