Fix release workflow
Fix release workflow: I made fixes in #244, #243, #242, #241, #240, #238, but all
of them were insufficient. This commit fixes the release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,4 +55,4 @@ jobs:
         if: github.event_name == 'release' && !github.event.release.prerelease
         uses: softprops/action-gh-release@v2
         with:
-          files: ./dist/*
+          files: ./dist/**/*
